# JWSToolKit

./: .pylintrc  .readthedocs.yaml  Cube.py  README.md  Spec.py  main.py  pyproject.toml  requirements.txt
.github/: ci.yml
.github/workflows/: ci.yml  codecov.yml
JWSToolKit/src/: Cube.py  __init__.py
conda-recipe/: meta.yaml
docs/: Cube.rst  Spec.rst  authors_and_credits.rst  conf.py  getting_started.rst  index.rst  installation.rst  modules.rst  objects.rst
docs/objects/: cube_class.rst  cube_manip.rst  image_class.rst  image_manip.rst  spec_class.rst  spec_manip.rst
src/: Cube.py  Image.py  Spec.py  __init__.py  main.py
src/JWSToolKit/: Cube.py  Image.py  Spec.py  main.py
tests/: main.py  test_cube.py
