[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "JWSToolKit"
version = "1.0.8"
description = "A python package for handling JWST observations"
readme = "README.md"
authors = [{ name = "Valentin Delabrosse", email = "valentin.delabrosse@univ-grenoble-alpes.fr" }]
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "matplotlib",
    "astropy", 
    "tqdm",
    "scipy"
]

[tool.setuptools]
package-dir = {"" = ".."}  # Avant était dans source

[tool.setuptools.packages.find]
where = [".."]  # ✅ Avant était dans source
